--- a/views/crearCuenta.ejs
+++ b/views/crearCuenta.ejs
@@ -1,25 +1,24 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <form action="/crearCuenta" method="post" class="default-form">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            
-            <input type="email" name="email" placeholder="Email">
+            <input class="form-control" type="email" name="email" placeholder="Email">
         </div>
         <div class="campo">
-            
-            <input type="text" name="nombre" placeholder="Nombre">
+            <input class="form-control" type="text" name="nombre" placeholder="Nombre">
         </div>
         <div class="campo">
-            
-            <input type="password" name="password" placeholder="Contraseña">
+            <input class="form-control" type="password" name="password" placeholder="Contraseña">
         </div>
         <div class="campo">
-            
-            <input type="password" name="confirmar" placeholder="Repite Contraseña">
+
+            <input class="form-control" type="password" name="confirmar" placeholder="Repite Contraseña">
         </div>
         <div class="campo enviar">
-            <input type="submit" value="Crear Cuenta" class="btn btn-azul">
+            <input type="submit" value="Crear Cuenta" class="btn btn-primary">
         </div>
     </form>
 
