--- a/views/olvidePassword.ejs
+++ b/views/olvidePassword.ejs
@@ -1,9 +1,11 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <form action="/olvidePassword" method="post" class="default-form">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            <input type="email" name="email" placeholder="Tu email">
+            <input class="form-control" type="email" name="email" placeholder="Tu email">
         </div>
         <div class="campo enviar">
             <input type="submit" value="Enviar" class="btn btn-azul">
