--- a/views/partials/nav-autorizado.ejs
+++ b/views/partials/nav-autorizado.ejs
@@ -1,3 +1,5 @@
-<a href="/perfil/<%= usuario.id %>">Hola <%= usuario.nombre %>!</a>
-<a href="/administracion">Mis tareas</a>
-<a href="/cerrarSesion">Cerrar Sesion</a>
+<a class="nav-link fw-bold d-flex  mb-2" href="/perfil/<%= usuario.id %>">Hola <%= usuario.nombre %>
+        !</a>
+
+<a class="nav-link me-2 fw-bold d-flex mb-2" href="/administracion">Mis tareas</a>
+<a class="nav-link me-2 fw-bold d-flex mb-2" href="/cerrarSesion">Cerrar Sesion</a>
