--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -1,58 +1,68 @@
 <main class="contenedor panel-administracion">
-    <h1><%= pagina %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <div class="contenedor-botones">
-        <a href="/nuevaTarea" class="btn btn-azul">Nueva Tarea</a>
-        <a href="/editarPerfil" class="btn btn-amarillo">Editar Perfil</a>
-        <a href="/cambiarPassword" class="btn btn-azul2">Cambiar Contraseña</a>
+        <a href="/nuevaTarea" class="btn btn-primary mb-1">Nueva Tarea</a>
+        <a href="/editarPerfil" class="btn btn-warning mb-1">Editar Perfil</a>
+        <a href="/cambiarPassword" class="btn btn-info mb-1">Cambiar Contraseña</a>
     </div>
     <div class="seccion-admin">
         <h2>Tus Tareas</h2>
         <% if (!tareas.length) { %>
             <h4>No tienes tareas pendientes</h4>
-        <% }else{ %>
-            <ul>
-                <% moment.locale("es"); %>
-                <% tareas.forEach(tarea => { %>
-                <% fecha = tarea.fecha+" "+tarea.hora 
+            <% }else{ %>
+                <ul>
+                    <% moment.locale("es"); %>
+                        <% tareas.forEach(tarea=> { %>
+                            <% fecha=tarea.fecha+" "+tarea.hora 
                    fecha = moment(fecha).format('LLLL')%>
                     <li>
-                        <div class="informacion-admin">
-                            <p class="fecha"><%= fecha  %>h</p>
-                            <h3><%= tarea.tarea %></h3>
-                        </div>
-                        <div class="acciones contenedor-botones">
-                            <a href=<%=`/editarTarea/${tarea.slug}`%> class="btn btn-rosa">Editar</a>
-                            <a href=<%=`/eliminarTarea/${tarea.slug}`%> class="btn btn-rojo" >Eliminar </a>
-                        </div>
-                    </li>
-                <% }) %>
-            </ul>
+                        <div class=" informacion-admin">
+                                <p class="fecha">
+                                    <%= fecha %>h
+                                </p>
+                                <h3 class="fw-bold">
+                                    <%= tarea.tarea %>
+                                </h3>
+    </div>
+    <div class="acciones contenedor-botones">
+        <a href=<%=`/editarTarea/${tarea.slug}`%> class="btn mb-1 btn-warning">Editar</a>
+        <a href=<%=`/eliminarTarea/${tarea.slug}`%> class="btn mb-1 btn-danger" >Eliminar </a>
+    </div>
+    </li>
+    <% }) %>
+        </ul>
         <% }%>
-    </div> <!--Fin tareas-->
-    <div class="seccion-admin">
-        <h2>Tareas anteriores</h2>
-        
-        <% if (!tareasAn.length) { %>
-            <h4>No tienes tareas finalizadas</h4>
-        <% }else{ %>
-            <ul>
-                <% moment.locale("es"); %>
-                <% tareasAn.forEach(tareaAnt => { %>
-                <% fecha = tareaAnt.fecha+" "+tareaAnt.hora 
+            </div> <!--Fin tareas-->
+            <div class="seccion-admin">
+                <h2>Tareas anteriores</h2>
+
+                <% if (!tareasAn.length) { %>
+                    <h4>No tienes tareas finalizadas</h4>
+                    <% }else{ %>
+                        <ul>
+                            <% moment.locale("es"); %>
+                                <% tareasAn.forEach(tareaAnt=> { %>
+                                    <% fecha=tareaAnt.fecha+" "+tareaAnt.hora 
                    fecha = moment(fecha).format('LLLL')%>
                     <li>
-                        <div class="informacion-admin">
-                            <p class="fecha"><%= fecha  %>h</p>
-                            <h3><%= tareaAnt.tarea %></h3>
-                        </div>
-                        <div class="acciones contenedor-botones">
-                            <a href=<%=`/editarTarea/${tareaAnt.slug}`%> class="btn btn-rosa">Editar</a>
-                            <a href=<%=`/eliminarTarea/${tareaAnt.slug}`%> class="btn btn-rojo" >Eliminar </a>
-                        </div>
-                    </li>
-                <% }) %>
-            </ul>
-        <% }%>
-    </div><!--Fin tareas anteriores-->
+                        <div class=" informacion-admin">
+                                        <p class="fecha">
+                                            <%= fecha %>h
+                                        </p>
+                                        <h3>
+                                            <%= tareaAnt.tarea %>
+                                        </h3>
+            </div>
+            <div class="acciones contenedor-botones">
+                <a href=<%=`/editarTarea/${tareaAnt.slug}`%> class="btn mb-1 btn-warning">Editar</a>
+                <a href=<%=`/eliminarTarea/${tareaAnt.slug}`%> class="btn mb-1 btn-danger" >Eliminar </a>
+            </div>
+            </li>
+            <% }) %>
+                </ul>
+                <% }%>
+                    </div><!--Fin tareas anteriores-->
 
 </main>
