--- a/views/cambiarPassword.ejs
+++ b/views/cambiarPassword.ejs
@@ -1,21 +1,19 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina %></h1>
     <form action="/cambiarPassword" method="post" class="default-form">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            
-            <input type="password" name="anterior" placeholder="Contraseña anterior">
+
+            <input class="form-control" type="password" name="anterior" placeholder="Contraseña anterior">
         </div>
         <div class="campo">
-            
-            <input type="password" name="password" placeholder="Contraseña nueva">
+
+            <input class="form-control" type="password" name="password" placeholder="Contraseña nueva">
         </div>
         <div class="campo">
-            <input type="password" name="confirmar" placeholder="Repite la Contraseña">
+            <input class="form-control" type="password" name="confirmar" placeholder="Repite la Contraseña">
         </div>
-       
         <div class="campo enviar">
-            <input type="submit" value="Cambiar Contraseña" class="btn btn-azul">
+            <input type="submit" value="Cambiar Contraseña" class="btn btn-success">
         </div>
     </form>
 </main>
