--- a/views/editarPerfil.ejs
+++ b/views/editarPerfil.ejs
@@ -1,28 +1,30 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina  %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <form action="/editarPerfil?_csrf=<%=csrfToken%>" method="post" class="default-form" enctype="multipart/form-data">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            
-            <input type="email" name="email" value="<%= usuario.email %>" placeholder="Email">
+
+            <input class="form-control" type="email" name="email" value="<%= usuario.email %>" placeholder="Email">
         </div>
         <div class="campo">
-            <input type="text" name="nombre" value="<%= usuario.nombre %>" placeholder="Nombre">
-        </div> 
+            <input class="form-control" type="text" name="nombre" value="<%= usuario.nombre %>" placeholder="Nombre">
+        </div>
         <div class="campo">
-            <input type="file" name="imagen">
+            <input class="form-control" type="file" name="imagen">
         </div>
         <% if (usuario.imagen) { %>
             <div class="campo">
                 <label>Imagen actual</label>
-                <img src="/uploads/<%= usuario.imagen %>" width="400">
+                <img class="rounded-circle" src="/uploads/<%= usuario.imagen %>" width="100">
             </div>
-        <% } else { %>
-            <p>No hay imagen actual</p>
-            <% } %>
-        <div class="campo enviar">
-            <input type="submit" value="Guardar Cambios" class="btn btn-azul">
-        </div>
+            <% } else { %>
+                <p>No hay imagen actual</p>
+                <% } %>
+                    <div class="campo enviar">
+                        <input type="submit" value="Guardar Cambios" class="btn btn-success">
+                    </div>
     </form>
 
 </main>
