--- a/views/iniciarSesion.ejs
+++ b/views/iniciarSesion.ejs
@@ -1,21 +1,23 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <form action="/" method="post" class="default-form">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            
-            <input type="email" name="email" placeholder="Email">
+
+            <input class="form-control" type="email" name="email" placeholder="Email">
         </div>
         <div class="campo">
-            
-            <input type="password" name="password" placeholder="Contraseña">
+
+            <input class="form-control" type="password" name="password" placeholder="Contraseña">
         </div>
         <div class="acciones">
             <p>Has olvidado la contaseña: <a href="/olvidePassword">haz click aqui</a></p>
         </div>
-       
+
         <div class="campo enviar">
-            <input type="submit" value="Iniciar Sesion" class="btn btn-azul">
+            <input type="submit" value="Iniciar Sesion" class="btn btn-success">
         </div>
     </form>
 </main>
