--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,42 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DoToList - <%= pagina %></title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Staatliches&display=swap" rel="stylesheet">
+    <title>DoToList - <%= pagina %>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Staatliches&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/myStyle.css">
     <link href="/img/logo.ico" type="image/x-icon" rel="shortcut icon" />
 
 </head>
-<body>
-    <header class="site-header contenedor">
-        <a href=<%= !usuario.id ? "/" : "/administracion"  %>>
-            <img src="/img/logo.png" alt="logo DoToList">
-        </a>
-        <nav class="nav">
-            <% if (!usuario.id) { %>
-                <%- include ("partials/nav-noautorizado.ejs") %>
-            <% } else{ %>
-                <%- include ("partials/nav-autorizado.ejs") %>
-            <% } %>
-        </nav>
-    </header>
 
-    <% if(locals.mensajes){ %>
-        <% const categoria = Object.keys(locals.mensajes) %>
-        <% if(categoria.length){ %>
-            <% locals.mensajes[categoria].forEach(alerta => { %>
-                <div class="alertas">
-                    <p class="alerta <%= categoria %>"><%= alerta %></p>
+<body>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+        <symbol id="circle-half" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
+        </symbol>
+
+        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+            <path
+                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
+            <path
+                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+        </symbol>
+
+        <symbol id="sun-fill" viewBox="0 0 16 16">
+            <path
+                d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+        </symbol>
+    </svg>
+
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href=<%=!usuario.id ? "/" : "/administracion" %>>
+                <img src="/img/logo.png" alt="logo DoToList">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav ms-auto">
+                    <% if (!usuario.id) { %>
+                        <%- include ("partials/nav-noautorizado.ejs") %>
+                            <% } else{ %>
+                                <%- include ("partials/nav-autorizado.ejs") %>
+                                    <% } %>
+                                        <li class="nav-item dropdown" data-bs-theme="light">
+                                            <button
+                                                class="btn btn-link nav-link dropdown-toggle d-flex align-items-center"
+                                                id="bd-theme" type="button" aria-expanded="false"
+                                                data-bs-toggle="dropdown" data-bs-display="static">
+                                                <svg class="bi my-1 theme-icon-active" width="16" height="16"
+                                                    fill="currentColor">
+                                                    <use href="#circle-half"></use>
+                                                </svg>
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme">
+                                                <li>
+                                                    <button type="button"
+                                                        class="dropdown-item d-flex align-items-center"
+                                                        data-bs-theme-value="light">
+                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                            height="16" fill="currentColor">
+                                                            <use href="#sun-fill"></use>
+                                                        </svg>
+                                                        Light
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button type="button"
+                                                        class="dropdown-item d-flex align-items-center"
+                                                        data-bs-theme-value="dark">
+                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                            height="16" fill="currentColor">
+                                                            <use href="#moon-stars-fill"></use>
+                                                        </svg>
+                                                        Dark
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button type="button"
+                                                        class="dropdown-item d-flex align-items-center active"
+                                                        data-bs-theme-value="auto">
+                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                            height="16" fill="currentColor">
+                                                            <use href="#circle-half"></use>
+                                                        </svg>
+                                                        Auto
+                                                    </button>
+                                                </li>
+                                            </ul>
+                                        </li>
                 </div>
-            <% }); %>
-        <% } %>
-    <% } %>
-    <%- body  %>
+            </div>
+        </div>
+    </nav>
+    <% if(locals.mensajes){ %>
+        <% const categoria=Object.keys(locals.mensajes) %>
+            <% if(categoria.length){ %>
+                <% locals.mensajes[categoria].forEach(alerta=> { %>
+                    <div class="alertas">
+                        <p class="alerta <%= categoria %>">
+                            <%= alerta %>
+                        </p>
+                    </div>
+                    <% }); %>
+                        <% } %>
+                            <% } %>
+                                <%- body %>
 
 </body>
+<script src="/js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
 </html>
