--- a/views/nuevaTarea.ejs
+++ b/views/nuevaTarea.ejs
@@ -1,21 +1,23 @@
 <main class="contenedor contenedor-formularios">
-    <h1><%= pagina %></h1>
+    <h1>
+        <%= pagina %>
+    </h1>
     <form action="/nuevaTarea" method="post" class="default-form">
-        <input type="hidden" name="_csrf" value= <%=csrfToken%>>
+        <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
-            
-            <input type="text" name="tarea" placeholder="Tu tarea">
+
+            <input class="form-control" type="text" name="tarea" placeholder="Tu tarea">
+        </div>
+        <div class="campo ">
+
+            <input class="form-control" type="date" name="fecha">
         </div>
         <div class="campo">
-            
-            <input type="date" name="fecha" >
-        </div>
-        <div class="campo">
-            
-            <input type="time" name="hora" >
+
+            <input class="form-control" type="time" name="hora">
         </div>
         <div class="campo enviar">
-            <input type="submit" value="Crear Tarea" class="btn btn-azul">
+            <input type="submit" value="Crear Tarea" class="btn btn-success">
         </div>
     </form>
 </main>
