--- a/views/partials/nav-noautorizado.ejs
+++ b/views/partials/nav-noautorizado.ejs
@@ -1,2 +1,2 @@
-<a href="/">Iniciar Sesión</a>
-<a href="/crearCuenta">Crear Cuenta</a>
+<a id="usu" class="nav-item me-2 fw-bold d-flex mt-3 mb-2" href="/">Iniciar Sesión</a>
+<a class="nav-item me-2 fw-bold d-flex mb-2" href="/crearCuenta">Crear Cuenta</a>
