--- a/views/partials/nav-autorizado.ejs
+++ b/views/partials/nav-autorizado.ejs
@@ -1,5 +1,5 @@
-<a class="nav-link fw-bold d-flex  mb-2" href="/perfil/<%= usuario.id %>">Hola <%= usuario.nombre %>
+<a class="nav-link fw-bold d-flex " href="/perfil/<%= usuario.id %>">Hola <%= usuario.nombre %>
         !</a>
 
-<a class="nav-link me-2 fw-bold d-flex mb-2" href="/administracion">Mis tareas</a>
-<a class="nav-link me-2 fw-bold d-flex mb-2" href="/cerrarSesion">Cerrar Sesion</a>
+<a class="nav-link fw-bold d-flex" href="/administracion">Mis tareas</a>
+<a class="nav-link fw-bold d-flex border-end " href="/cerrarSesion">Cerrar Sesion</a>
