--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,75 +34,75 @@
                 d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
         </symbol>
     </svg>
-
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href=<%=!usuario.id ? "/" : "/administracion" %>>
-                <img src="/img/logo.png" alt="logo DoToList">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="navbar-nav ms-auto">
-                    <% if (!usuario.id) { %>
-                        <%- include ("partials/nav-noautorizado.ejs") %>
-                            <% } else{ %>
-                                <%- include ("partials/nav-autorizado.ejs") %>
-                                    <% } %>
-                                        <li class="nav-item dropdown" data-bs-theme="light">
-                                            <button
-                                                class="btn btn-link nav-link dropdown-toggle d-flex align-items-center"
-                                                id="bd-theme" type="button" aria-expanded="false"
-                                                data-bs-toggle="dropdown" data-bs-display="static">
-                                                <svg class="bi my-1 theme-icon-active" width="16" height="16"
-                                                    fill="currentColor">
-                                                    <use href="#circle-half"></use>
-                                                </svg>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme">
-                                                <li>
-                                                    <button type="button"
-                                                        class="dropdown-item d-flex align-items-center"
-                                                        data-bs-theme-value="light">
-                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
-                                                            height="16" fill="currentColor">
-                                                            <use href="#sun-fill"></use>
-                                                        </svg>
-                                                        Light
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button type="button"
-                                                        class="dropdown-item d-flex align-items-center"
-                                                        data-bs-theme-value="dark">
-                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
-                                                            height="16" fill="currentColor">
-                                                            <use href="#moon-stars-fill"></use>
-                                                        </svg>
-                                                        Dark
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button type="button"
-                                                        class="dropdown-item d-flex align-items-center active"
-                                                        data-bs-theme-value="auto">
-                                                        <svg class="bi me-2 opacity-50 theme-icon" width="16"
-                                                            height="16" fill="currentColor">
-                                                            <use href="#circle-half"></use>
-                                                        </svg>
-                                                        Auto
-                                                    </button>
-                                                </li>
-                                            </ul>
-                                        </li>
+    <header class="navbar navbar-expand-lg">
+        <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
+            <div class="container-fluid">
+                <a class="navbar-brand p-0 me-0 me-lg-2" href=<%=!usuario.id ? "/" : "/administracion" %>>
+                    <img src="/img/logo.png" alt="logo DoToList" width="200">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="navbar-nav ms-auto">
+                        <% if (!usuario.id) { %>
+                            <%- include ("partials/nav-noautorizado.ejs") %>
+                                <% } else{ %>
+                                    <%- include ("partials/nav-autorizado.ejs") %>
+                                        <% } %>
+                                            <li class="nav-item dropdown" data-bs-theme="light">
+                                                <button
+                                                    class="btn btn-link nav-link dropdown-toggle d-flex align-items-center"
+                                                    id="bd-theme" type="button" aria-expanded="false"
+                                                    data-bs-toggle="dropdown" data-bs-display="static">
+                                                    <svg class="bi my-1 theme-icon-active" width="16" height="16"
+                                                        fill="currentColor">
+                                                        <use href="#circle-half"></use>
+                                                    </svg>
+                                                </button>
+                                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme">
+                                                    <li>
+                                                        <button type="button"
+                                                            class="dropdown-item d-flex align-items-center"
+                                                            data-bs-theme-value="light">
+                                                            <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                                height="16" fill="currentColor">
+                                                                <use href="#sun-fill"></use>
+                                                            </svg>
+                                                            Light
+                                                        </button>
+                                                    </li>
+                                                    <li>
+                                                        <button type="button"
+                                                            class="dropdown-item d-flex align-items-center"
+                                                            data-bs-theme-value="dark">
+                                                            <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                                height="16" fill="currentColor">
+                                                                <use href="#moon-stars-fill"></use>
+                                                            </svg>
+                                                            Dark
+                                                        </button>
+                                                    </li>
+                                                    <li>
+                                                        <button type="button"
+                                                            class="dropdown-item d-flex align-items-center active"
+                                                            data-bs-theme-value="auto">
+                                                            <svg class="bi me-2 opacity-50 theme-icon" width="16"
+                                                                height="16" fill="currentColor">
+                                                                <use href="#circle-half"></use>
+                                                            </svg>
+                                                            Auto
+                                                        </button>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <% if(locals.mensajes){ %>
         <% const categoria=Object.keys(locals.mensajes) %>
             <% if(categoria.length){ %>
