--- a/views/partials/nav-noautorizado.ejs
+++ b/views/partials/nav-noautorizado.ejs
@@ -1,2 +1,2 @@
-<a class="nav-item fw-bold d-flex mb-2" href="/">Iniciar Sesión</a>
-<a class="nav-item fw-bold d-flex mb-2 border-end" href="/crearCuenta">Crear Cuenta</a>
+<a class="nav-link fw-bold d-flex" href="/">Iniciar Sesión</a>
+<a class="nav-link fw-bold d-flex border-end" href="/crearCuenta">Crear Cuenta</a>
