--- a/views/olvidePassword.ejs
+++ b/views/olvidePassword.ejs
@@ -8,7 +8,7 @@
             <input class="form-control" type="email" name="email" placeholder="Tu email">
         </div>
         <div class="campo enviar">
-            <input type="submit" value="Enviar" class="btn btn-azul">
+            <input type="submit" value="Enviar" class="btn btn-primary">
         </div>
     </form>
 </main>
