--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -6,14 +6,14 @@
         <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="campo">
 
-            <input type="password" name="password" placeholder="Contraseña nueva">
+            <input class="form-control" type="password" name="password" placeholder="Contraseña nueva">
         </div>
         <div class="campo">
-            <input type="password" name="confirmar" placeholder="Repite la Contraseña">
+            <input class="form-control" type="password" name="confirmar" placeholder="Repite la Contraseña">
         </div>
 
         <div class="campo enviar">
-            <input type="submit" value="Cambiar Contraseña" class="btn btn-azul">
+            <input type="submit" value="Cambiar Contraseña" class="btn btn-primary">
         </div>
     </form>
 </main>
