fixed email resetPas

--- a/views/email/RecuperarPassword.ejs
+++ b/views/email/RecuperarPassword.ejs
@@ -1,9 +1,9 @@
 <h1 style="
             text-align: center;
             font-family: Arial, Helvetica;        
-">Confirmar tu cuenta</h1>
+">Cambiar Contraseña</h1>
 <p style="
-font-family: Arial, Helvetica;" >Hola, si has olvidado tu contraseña,haz click en el siguiente enlace:</p>
+font-family: Arial, Helvetica;">Hola, si has olvidado tu contraseña,haz click en el siguiente enlace:</p>
 <a style="font-family: Arial, Helvetica;
           display: block;
           padding: 1rem;
@@ -11,7 +11,7 @@ font-family: Arial, Helvetica;" >Hola, si has olvidado tu contraseña,haz click 
           color: white;
           text-transform: uppercase;
           text-align: center;
-          text-decoration: none;"
- href="<%= url %>">Confirma tu cuenta</a>
-<p style="font-family: Arial, Helvetica;" >Si no puedes acceder a este enlace, visita: <%= url %></p>
-<p style="font-family: Arial, Helvetica;" >Si no solicitaste este e-mail ignoralo</p>
+          text-decoration: none;" href="<%= url %>">Cambiar Contraseña</a>
+<p style="font-family: Arial, Helvetica;">Si no puedes acceder a este enlace, visita: <%= url %>
+</p>
+<p style="font-family: Arial, Helvetica;">Si no solicitaste este e-mail ignoralo</p>
